--- a/templates/patient/individual-reports.html
+++ b/templates/patient/individual-reports.html
@@ -194,75 +194,39 @@
                         </div>
                     </div>
                     <div class="row" ng-if="featureList.pattestresults && generateFinished">
-                        <div class="">
-                            <div class="col-md-auto">
-                                <center>
-                                    <label class="control-label"><h2>{{'PATIENTREPORT.COLUMNS.LAB_TESTS.TITLE'|translate}}</h2></label>
-                                </center>
-                                <div class="">
-                                    <div class="gridStyle" style="border:none;" ui-grid="pattestGridOptions" style="height: auto !important;" ui-grid-resize-columns></div>
-                                </div>
-                            </div>
+                        <div class="col-xs-12">
+                            <h2 style="text-align: center;">{{'PATIENTREPORT.COLUMNS.LAB_TESTS.TITLE'|translate}}</h2>
+                            <div class="gridStyle" style="border:none;" ui-grid="pattestGridOptions" ui-grid-resize-columns></div>
                         </div>
                     </div>
                     <div class="row" ng-if="featureList.notifications && generateFinished">
-                        <div class="">
-                            <div class="col-md-auto">
-                                <center>
-                                    <label class="control-label"><h2>{{'PATIENTREPORT.COLUMNS.NOTES.TITLE'|translate}}</h2></label>
-                                </center>
-                                <div class="">
-                                    <div class="gridStyle" style="border:none;" ui-grid="noteGridOptions" ui-grid-resize-columns></div>
-                                </div>
-                            </div>
+                        <div class="col-xs-12">
+                            <h2 style="text-align: center;">{{'PATIENTREPORT.COLUMNS.NOTES.TITLE'|translate}}</h2>
+                            <div class="gridStyle" style="border:none;" ui-grid="noteGridOptions" ui-grid-resize-columns></div>
                         </div>
                     </div>
                     <div class="row" ng-if="featureList.treatplan && generateFinished">
-                        <div class="">
-                            <div class="col-md-auto">
-                                <center>
-                                    <label class="control-label"><h2>{{'PATIENTREPORT.COLUMNS.TREATMENT_PLAN.TITLE'|translate}}</h2></label>
-                                </center>
-                                <div class="">
-                                    <div class="gridStyle" style="border:none;" ui-grid="txplanGridOptions" ui-grid-resize-columns></div>
-                                </div>
-                            </div>
+                        <div class="col-xs-12">
+                            <h2 style="text-align: center;">{{'PATIENTREPORT.COLUMNS.TREATMENT_PLAN.TITLE'|translate}}</h2>
+                            <div class="gridStyle" style="border:none;" ui-grid="txplanGridOptions" ui-grid-resize-columns></div>
                         </div>
                     </div>
                     <div class="row" ng-if="featureList.clinicalnotes && generateFinished">
-                        <div class="">
-                            <div class="col-md-auto">
-                                <center>
-                                    <label class="control-label"><h2>{{'PATIENTREPORT.COLUMNS.CLINICAL_NOTES.TITLE'|translate}}</h2></label>
-                                </center>
-                                <div class="">
-                                    <div class="gridStyle" style="border:none;" ui-grid="clinnoteGridOptions" ui-grid-resize-columns></div>
-                                </div>
-                            </div>
+                        <div class="col-xs-12">
+                            <h2 style="text-align: center;">{{'PATIENTREPORT.COLUMNS.CLINICAL_NOTES.TITLE'|translate}}</h2>
+                            <div class="gridStyle" style="border:none;" ui-grid="clinnoteGridOptions" ui-grid-resize-columns></div>
                         </div>
                     </div>
                     <div class="row" ng-if="featureList.treatingteam && generateFinished">
-                        <div class="">
-                            <div class="col-md-auto">
-                                <center>
-                                    <label class="control-label"><h2>{{'PATIENTREPORT.COLUMNS.TREATMENT_TEAM.TITLE'|translate}}</h2></label>
-                                </center>
-                                <div class="">
-                                    <div class="gridStyle" style="border:none;" ui-grid="txteamGridOptions" ui-grid-resize-columns></div>
-                                </div>
-                            </div>
+                        <div class="col-xs-12">
+                            <h2 style="text-align: center;">{{'PATIENTREPORT.COLUMNS.TREATMENT_TEAM.TITLE'|translate}}</h2>
+                            <div class="gridStyle" style="border:none;" ui-grid="txteamGridOptions" ui-grid-resize-columns></div>
                         </div>
                     </div>
                     <div class="row" ng-if="featureList.general && generateFinished">
-                        <div class="">
-                            <div class="col-md-auto">
-                                <center>
-                                    <label class="control-label"><h2>{{'PATIENTREPORT.COLUMNS.GENERAL.TITLE'|translate}}</h2></label>
-                                </center>
-                                <div class="">
-                                    <div class="gridStyle" style="border:none;" ui-grid="generalGridOptions" ui-grid-resize-columns></div>
-                                </div>
-                            </div>
+                        <div class="col-xs-12">
+                            <h2 style="text-align: center;">{{'PATIENTREPORT.COLUMNS.GENERAL.TITLE'|translate}}</h2>
+                            <div class="gridStyle" style="border:none;" ui-grid="generalGridOptions" ui-grid-resize-columns></div>
                         </div>
                     </div>
                 </div>
