ui-grid height fix
calculate height from number of rows
currently it still shows the grid header even if there are 0 rows but this behaviour can be changed to hide the grid when there are 0 rows

--- a/templates/patient/group-reports.html
+++ b/templates/patient/group-reports.html
@@ -134,7 +134,7 @@
                     </div>
                     <div class="row" ng-show="showEducReport && category.education">
                         <div class="col-xs-12 animated fadeInRight">
-                            <div class="gridStyle" style="border:none;" ui-grid="educGridOptions" ui-grid-resize-columns ui-grid-auto-resize></div>
+                            <div class="gridStyle" style="border:none; max-height:370px;" ui-grid="educGridOptions" ui-grid-resize-columns ui-grid-auto-resize></div>
                         </div>
                     </div>
                 
@@ -222,7 +222,7 @@
                     </div>
                     <div class="row" ng-show="showQstReport && category.questionnaire">
                         <div class="col-xs-12 animated fadeInRight">
-                            <div class="gridStyle" style="border:none;" ui-grid="qstGridOptions" ui-grid-resize-columns ui-grid-auto-resize></div>
+                            <div class="gridStyle" style="border:none; max-height: 370px;" ui-grid="qstGridOptions" ui-grid-resize-columns ui-grid-auto-resize></div>
                         </div>
                     </div>
                     
@@ -282,7 +282,7 @@
                     </div>
                     <div class="row animated fadeInRight" ng-show="category.demographics">
                         <div class="col-xs-12">
-                            <div class="gridStyle" style="border:none;" ui-grid="demoGridOptions" ui-grid-resize-columns ui-grid-auto-resize></div>
+                            <div class="gridStyle" style="border:none; max-height: 370px;" ui-grid="demoGridOptions" ui-grid-resize-columns ui-grid-auto-resize></div>
                         </div>
                     </div>
                     
